# Data-Science

./: pyproject.toml
hm-1/: .gitignore  Hw1.ipynb
hm-2/: Hw2.1.ipynb
hw-10/: Hw10_p1.ipynb  Hw10_p2.ipynb
hw-11/: Hw11.ipynb
hw-12/: Hw12.ipynb
hw-2/: Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb  final_statistics.csv
hw-3/: Hw3.ipynb
hw-4/: OverfittingHomeWork.ipynb
hw-5/: Hw5.ipynb
hw-6/: Hw6.ipynb
hw-7/: Hw7.ipynb
hw-8/: GoIT_HW_8_new.ipynb
hw-9/: Hw9.ipynb
