[tool.poetry]
name = "data-science"
version = "0.1.0"
description = ""
authors = ["Vadim-3 <128088822+Vadim-3@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
notebook = "^7.0.6"
lxml = "^4.9.3"
openpyxl = "^3.1.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
